@@ -1,6 +1,8 @@
 
-# $Id: buyitnow.t,v 1.4 2005/08/14 21:45:45 Daddy Exp $
+# $Id: buyitnow.t,v 1.5 2005/08/28 02:23:38 Daddy Exp $
 
+use Bit::Vector;
+use Data::Dumper;
 use ExtUtils::testlib;
 use Test::More no_plan;
 
@@ -37,19 +39,40 @@ $iDump = 0;
 # Now get the results and inspect them:
 my @ao = $WWW::Search::Test::oSearch->results();
 cmp_ok(0, '<', scalar(@ao), 'got some results');
+# We perform this many tests on each result object:
+my $iTests = 5;
+my $iAnyFailed = 0;
+my ($iVall, %hash);
+my $oV = new Bit::Vector($iTests);
+$oV->Fill;
+$iVall = $oV->to_Dec;
 foreach my $oResult (@ao)
   {
-  like($oResult->url, qr{\Ahttp://cgi\d*\.ebay\.com},
-       'result URL is really from ebay.com');
-  cmp_ok($oResult->title, 'ne', '',
-         'result Title is not empty');
-  cmp_ok($oResult->change_date, 'ne', '',
-         'result date is not empty');
-  like($oResult->description, qr{no\s+bids;},
-       'result bid count is ok');
-  like($oResult->description, qr{starting\sbid},
-       'result bid amount is ok');
+  $oV->Bit_Off(0) unless like($oResult->url, qr{\Ahttp://cgi\d*\.ebay\.com},
+                              'result URL is really from ebay.com');
+  $oV->Bit_Off(1) unless cmp_ok($oResult->title, 'ne', '',
+                                'result Title is not empty');
+  $oV->Bit_Off(2) unless cmp_ok($oResult->change_date, 'ne', '',
+                                'result date is not empty');
+  $oV->Bit_Off(3) unless like($oResult->description, qr{no\s+bids;},
+                              'result bid count is ok');
+  $oV->Bit_Off(4) unless like($oResult->description, qr{starting\sbid},
+                              'result bid amount is ok');
+  my $iV = $oV->to_Dec;
+  if ($iV < $iVall)
+    {
+    $hash{$iV} = $oResult;
+    $iAnyFailed++;
+    } # if
   } # foreach
+if ($iAnyFailed)
+  {
+  diag(" Here are results that exemplify the failures:");
+  while (my ($sKey, $sVal) = each %hash)
+    {
+    diag(Dumper($sVal));
+    } # while
+  } # if
 
 
 __END__
